--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -302,7 +302,7 @@
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
     {% render 'everyday-ai-nav' %}
-    
+    {% render 'everyday-ai-footer' %}
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
